@@ -42,3 +42,19 @@ NULL
 ##'  \code{mlpack} conventions.
 ##' @source \url{https://raw.githubusercontent.com/mlpack/mlpack/master/src/mlpack/tests/data/test_data_3_1000.csv}
 NULL
+
+##' LARS test data from the mlpack unit tests: regressors
+##'
+##' @docType data
+##' @name lars_dependent_x
+##' @format A \sQuote{csv} file.
+##' @source \url{https://github.com/mlpack/mlpack/blob/master/src/mlpack/tests/data/lars_dependent_x.csv}
+NULL
+
+##' LARS test data from the mlpack unit tests: target
+##'
+##' @docType data
+##' @name lars_dependent_y
+##' @format A \sQuote{csv} file.
+##' @source \url{https://github.com/mlpack/mlpack/blob/master/src/mlpack/tests/data/lars_dependent_y.csv}
+NULL
