@@ -4,6 +4,9 @@
 	* rawdata/lars_dependent_x.csv: X data, limited rank matrix
 	* rawdata/lars_dependent_y.csv: Y colum
 	* rawdata/lars_data.r: Processing
+	* R/data.R: Documentation
+	* man/lars_dependent_x.Rd: Idem
+	* man/lars_dependent_y.Rd: Idem
 
 2018-02-11  Dirk Eddelbuettel  <edd@debian.org>
 
